maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:36: error: not found: value turn
    else { while (dirFree(Direction.NORTH) && turn==0)
                                              ^